@@ -1,186 +1,154 @@
 package org.example.webtuthien.service;
 
-import org.springframework.stereotype.Service;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.example.webtuthien.model.Campaign;
 import org.example.webtuthien.repository.CampaignRepository;
-import org.example.webtuthien.repository.DonationRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
-import java.time.OffsetDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.Map;
-import java.util.HashMap;
+import java.util.*;
 
 @Service
 public class CampaignService {
-    private final CampaignRepository repository;
     
     @Autowired
-    private DonationRepository donationRepository;
-
-    public CampaignService(CampaignRepository repository) {
-        this.repository = repository;
-    }
+    private CampaignRepository repository;
 
     public List<Campaign> list() {
         return repository.findAll();
     }
 
     public List<Campaign> listActive() {
-        return repository.findActive();
-    }
-
-    public List<Campaign> findByPartnerId(Long partnerId) {
-        return repository.findByPartnerId(partnerId);
-    }
-
-    public List<Campaign> findByCategory(String category) {
-        return repository.findByCategory(category);
+        return repository.findByStatus("Active");
     }
 
     public Optional<Campaign> findById(Long id) {
         return repository.findById(id);
     }
 
+    public List<Campaign> findByCategory(String category) {
+        return repository.findByCategory(category);
+    }
+
+    public List<Campaign> findByPartnerId(Long partnerId) {
+        return repository.findByPartnerId(partnerId);
+    }
+
     public Campaign create(Campaign campaign) {
-        // Validate required fields
-        if (campaign.getPartnerId() == null) {
-            throw new IllegalArgumentException("partnerId is required");
-        }
-        if (campaign.getTitle() == null || campaign.getTitle().isBlank()) {
-            throw new IllegalArgumentException("title is required");
-        }
-        if (campaign.getDescription() == null || campaign.getDescription().isBlank()) {
-            throw new IllegalArgumentException("description is required");
+        if (campaign.getTitle() == null || campaign.getTitle().trim().isEmpty()) {
+            throw new IllegalArgumentException("Title is required");
         }
         if (campaign.getTargetAmount() == null || campaign.getTargetAmount().compareTo(BigDecimal.ZERO) <= 0) {
-            throw new IllegalArgumentException("targetAmount must be greater than 0");
+            throw new IllegalArgumentException("Target amount must be greater than 0");
         }
-        if (campaign.getCategory() == null || campaign.getCategory().isBlank()) {
-            throw new IllegalArgumentException("category is required");
-        }
-        if (campaign.getEndDate() != null && campaign.getEndDate().isBefore(OffsetDateTime.now())) {
-            throw new IllegalArgumentException("endDate must be in the future");
-        }
-
-        // Set default values
         if (campaign.getCurrentAmount() == null) {
             campaign.setCurrentAmount(BigDecimal.ZERO);
         }
-        if (campaign.getStatus() == null || campaign.getStatus().isBlank()) {
-            campaign.setStatus("active");
+        if (campaign.getStatus() == null || campaign.getStatus().isEmpty()) {
+            campaign.setStatus("Active");
         }
-
-        return repository.insert(campaign);
+        return repository.save(campaign);
     }
 
-    public Campaign updateCurrentAmount(Long campaignId, BigDecimal amount) {
-        Optional<Campaign> campaignOpt = repository.findById(campaignId);
-        if (campaignOpt.isEmpty()) {
-            throw new IllegalArgumentException("Campaign not found");
-        }
-
-        Campaign campaign = campaignOpt.get();
-        BigDecimal base = campaign.getCurrentAmount() != null ? campaign.getCurrentAmount() : BigDecimal.ZERO;
-        BigDecimal newAmount = base.add(amount);
-        repository.updateCurrentAmount(campaignId, newAmount);
-
-        // Update campaign status if target is reached
-        if (newAmount.compareTo(campaign.getTargetAmount()) >= 0) {
-            repository.updateStatus(campaignId, "completed");
-        }
-
-        return repository.findById(campaignId).orElse(campaign);
+    @Transactional
+    public Campaign updateCurrentAmount(Long id, BigDecimal amount) {
+        Campaign campaign = repository.findById(id)
+            .orElseThrow(() -> new IllegalArgumentException("Campaign not found"));
+        
+        BigDecimal newAmount = campaign.getCurrentAmount().add(amount);
+        campaign.setCurrentAmount(newAmount);
+        
+        return repository.save(campaign);
     }
 
-    public Campaign updateStatus(Long campaignId, String status) {
-        Optional<Campaign> campaignOpt = repository.findById(campaignId);
-        if (campaignOpt.isEmpty()) {
-            throw new IllegalArgumentException("Campaign not found");
+    @Transactional
+    public Campaign updateStatus(Long id, String status) {
+        Campaign campaign = repository.findById(id)
+            .orElseThrow(() -> new IllegalArgumentException("Campaign not found"));
+        
+        List<String> validStatuses = Arrays.asList("Active", "Completed", "Cancelled");
+        if (!validStatuses.contains(status)) {
+            throw new IllegalArgumentException("Invalid status. Must be one of: " + String.join(", ", validStatuses));
         }
-
-        if (!List.of("active", "completed", "cancelled", "expired").contains(status)) {
-            throw new IllegalArgumentException("Invalid status");
-        }
-
-        repository.updateStatus(campaignId, status);
-        return repository.findById(campaignId).orElse(campaignOpt.get());
+        
+        campaign.setStatus(status);
+        return repository.save(campaign);
     }
 
     public List<String> getCategories() {
-        return List.of(
-            "Y tế", "Giáo dục", "Thiên tai", "Trẻ em", "Người già", 
-            "Môi trường", "Động vật", "Văn hóa", "Thể thao", "Khác"
+        return Arrays.asList(
+            "Y tế", "Giáo dục", "Thiên tai", "Trẻ em", 
+            "Người già", "Môi trường", "Động vật", 
+            "Văn hóa", "Thể thao", "Khác"
         );
     }
 
-    public void deleteCampaign(Long id) {
-        if (id == null) {
-            throw new IllegalArgumentException("Campaign ID is required");
-        }
-        // Xóa donations liên quan trước để tránh lỗi FK
-        try {
-            donationRepository.deleteByCampaignId(id);
-        } catch (Exception ignored) {}
-        repository.deleteById(id);
+    public Map<String, Object> getCampaignStats(Long campaignId) {
+        Campaign campaign = repository.findById(campaignId)
+            .orElseThrow(() -> new IllegalArgumentException("Campaign not found"));
+        
+        Map<String, Object> stats = new HashMap<>();
+        stats.put("donationCount", 0); // This should be calculated from donations table
+        stats.put("totalAmount", campaign.getCurrentAmount());
+        stats.put("progressPercentage", campaign.getProgressPercentage());
+        
+        return stats;
     }
 
     public List<Map<String, Object>> listWithStats() {
         List<Campaign> campaigns = repository.findAll();
-        return campaigns.stream().map(campaign -> {
-            Map<String, Object> campaignWithStats = new HashMap<>();
-            campaignWithStats.put("id", campaign.getId());
-            campaignWithStats.put("partnerId", campaign.getPartnerId());
-            campaignWithStats.put("title", campaign.getTitle());
-            campaignWithStats.put("description", campaign.getDescription());
-            campaignWithStats.put("targetAmount", campaign.getTargetAmount());
-            campaignWithStats.put("currentAmount", campaign.getCurrentAmount());
-            campaignWithStats.put("category", campaign.getCategory());
-            campaignWithStats.put("imageUrl", campaign.getImageUrl());
-            campaignWithStats.put("status", campaign.getStatus());
-            campaignWithStats.put("endDate", campaign.getEndDate() != null ? campaign.getEndDate().toString() : null);
-            campaignWithStats.put("createdAt", campaign.getCreatedAt() != null ? campaign.getCreatedAt().toString() : null);
-
-            // Add donation count (fail-safe)
-            int donationCount = 0;
-            try {
-                donationCount = donationRepository.countByCampaignId(campaign.getId());
-            } catch (Exception ignored) {}
-            campaignWithStats.put("donationCount", donationCount);
-
-            return campaignWithStats;
-        }).collect(java.util.stream.Collectors.toList());
-    }
-    
-    public Map<String, Object> findByIdWithStats(Long id) {
-        Optional<Campaign> campaignOpt = repository.findById(id);
-        if (campaignOpt.isEmpty()) {
-            throw new IllegalArgumentException("Campaign not found");
+        List<Map<String, Object>> result = new ArrayList<>();
+        
+        for (Campaign campaign : campaigns) {
+            Map<String, Object> campaignMap = new HashMap<>();
+            campaignMap.put("id", campaign.getId());
+            campaignMap.put("partnerId", campaign.getPartnerId());
+            campaignMap.put("title", campaign.getTitle());
+            campaignMap.put("description", campaign.getDescription());
+            campaignMap.put("targetAmount", campaign.getTargetAmount());
+            campaignMap.put("currentAmount", campaign.getCurrentAmount());
+            campaignMap.put("category", campaign.getCategory());
+            campaignMap.put("status", campaign.getStatus());
+            campaignMap.put("imageUrl", campaign.getImageUrl());
+            campaignMap.put("endDate", campaign.getEndDate());
+            campaignMap.put("createdAt", campaign.getCreatedAt());
+            campaignMap.put("progressPercentage", campaign.getProgressPercentage());
+            campaignMap.put("donationCount", 0); // Should be from donations table
+            
+            result.add(campaignMap);
         }
+        
+        return result;
+    }
 
-        Campaign campaign = campaignOpt.get();
-        Map<String, Object> campaignWithStats = new HashMap<>();
-        campaignWithStats.put("id", campaign.getId());
-        campaignWithStats.put("partnerId", campaign.getPartnerId());
-        campaignWithStats.put("title", campaign.getTitle());
-        campaignWithStats.put("description", campaign.getDescription());
-        campaignWithStats.put("targetAmount", campaign.getTargetAmount());
-        campaignWithStats.put("currentAmount", campaign.getCurrentAmount());
-        campaignWithStats.put("category", campaign.getCategory());
-        campaignWithStats.put("imageUrl", campaign.getImageUrl());
-        campaignWithStats.put("status", campaign.getStatus());
-        campaignWithStats.put("endDate", campaign.getEndDate() != null ? campaign.getEndDate().toString() : null);
-        campaignWithStats.put("createdAt", campaign.getCreatedAt() != null ? campaign.getCreatedAt().toString() : null);
+    public Map<String, Object> findByIdWithStats(Long id) {
+        Campaign campaign = repository.findById(id)
+            .orElseThrow(() -> new IllegalArgumentException("Campaign not found with id: " + id));
+        
+        Map<String, Object> result = new HashMap<>();
+        result.put("id", campaign.getId());
+        result.put("partnerId", campaign.getPartnerId());
+        result.put("title", campaign.getTitle());
+        result.put("description", campaign.getDescription());
+        result.put("targetAmount", campaign.getTargetAmount());
+        result.put("currentAmount", campaign.getCurrentAmount());
+        result.put("category", campaign.getCategory());
+        result.put("status", campaign.getStatus());
+        result.put("imageUrl", campaign.getImageUrl());
+        result.put("endDate", campaign.getEndDate());
+        result.put("createdAt", campaign.getCreatedAt());
+        result.put("progressPercentage", campaign.getProgressPercentage());
+        result.put("donationCount", 0); // Should be from donations table
+        
+        return result;
+    }
 
-        // Add donation count (fail-safe)
-        int donationCount = 0;
-        try {
-            donationCount = donationRepository.countByCampaignId(campaign.getId());
-        } catch (Exception ignored) {}
-        campaignWithStats.put("donationCount", donationCount);
-
-        return campaignWithStats;
+    @Transactional
+    public void deleteCampaign(Long id) {
+        if (!repository.existsById(id)) {
+            throw new IllegalArgumentException("Campaign not found with id: " + id);
+        }
+        repository.deleteById(id);
     }
 }
